# ADC64_analysis_with_GUI

./: CMakeLists.txt  nprocs_calibration.sh  sdth.txt
.cache/clangd/index/: ADCHeaderStructs.h.7A13697771932DE2.idx  BinaryDataStructs.cpp.06A659782B3E3BCB.idx  BinaryDataStructs.cpp.17F0DBFDB6020A3E.idx  BinaryDataStructs.h.042E6CF35D5FE456.idx  BinaryDataStructs.h.6D393C918B8D4154.idx  Calibrator.C.DB77379369F6B3C9.idx  ChannelEntry.cpp.2AB203293CC54C12.idx  ChannelEntry.h.85D1D06DD19E6DD3.idx  ChannelMap.cpp.95CBB35FD08B3FE4.idx  ChannelMap.h.07B27B93C268F13E.idx  ChannelMap.h.6C81481CAAE58C77.idx  ChannelMapGenerator.cpp.82BF621B6D111008.idx  Coeffs.h.B5FADF78170C509A.idx  CreateTrackTree.C.7BBCEF96E74D0DF4.idx  FileReader.cpp.3E1FF0C0CCB2BB8A.idx  Map.h.4E34747265E52AC3.idx  PSDmuonTracker.cpp.C56E45C00041FDF7.idx  PSDmuonTracker.h.E3315A2E38F232CF.idx  ProgressDialog.h.FF136EBE2FE3A943.idx  ProgressWidget.h.1B4230A42DE76563.idx  Worker.cpp.AA9D56A3EBFFB2C6.idx  Worker.h.E8216A1D8D105253.idx  configmanager.h.457A4E9E0498895B.idx  ctpl.h.92CE9C833890E425.idx  ctpl_stl.h.1713CB5B5471A041.idx  json.hpp.011A676A3F958106.idx  json.hpp.62238B82B15D15FE.idx  json.hpp.66FC0D6D773265A6.idx  json.hpp.C9F65EFA8C83964C.idx  main.cpp.53107E91E35A4989.idx  main.cpp.648F5B6F0CE6F379.idx  main.cpp.CB98F9F2332B32E1.idx  mainwindow.cpp.3D008C702AD41F3A.idx  mainwindow.cpp.C965F393C8B56A23.idx  mainwindow.cpp.CFB1816A5C5E1F98.idx  mainwindow.h.8AFDDC221998750E.idx  mainwindow.h.B316BCE5FCB2448D.idx  mainwindow.h.F459168886084F06.idx  notQCustomPlot.h.3BBF2ECACBAE88CF.idx  qcustomplot.cpp.D956E376063DDBFC.idx  (+1 more)
AnalysisGUI/: CMakeLists.txt  main.cpp
AnalysisGUI/include/: BinaryDataStructs.h  EventFilterWidget.h  Histogram2DPlot.h  HistogramPlot.h  HistogramWindow.h  ParameterFilterWidget.h  ProgressDialog.h  ProgressWidget.h  UltraFastHistogramReader.h  Worker.h  configmanager.h  mainwindow.h  notQCustomPlot.h
AnalysisGUI/src/: BinaryDataStructs.cpp  BinaryDataStructs.cpp.wefwef  EventFilterWidget.cpp  Histogram2DPlot.cpp  HistogramPlot.cpp  HistogramWindow.cpp  ParameterFilterWidget.cpp  UltraFastHistogramReader.cpp  Worker.cpp  histogramwindow.ui  histogramwindow.ui.autosave  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  mainwindow_ui.py  qcustomplot.cpp  sdf
ChannelMap/: CMakeLists.txt  ChannelMapGenerator.cpp
muon_calibration_binary/: CMakeLists.txt  Calibrator.C  CreateTrackTree.C  DAQ.C  FileReader.cpp  GReader.C  LinkDef.h
muon_calibration_binary/.cache/clangd/index/: ADCHeaderStructs.h.50389071079B82F4.idx  ChannelEntry.cpp.2AB203293CC54C12.idx  ChannelEntry.h.85D1D06DD19E6DD3.idx  DataFileReader.h.ACCD2C49D6ED3BBD.idx  DataFormat.h.D4E93D390A42CD1C.idx  FileReader.cpp.3E1FF0C0CCB2BB8A.idx  FourierFilter.h.844793B887B1A668.idx  PSDmuonTracker.cpp.C56E45C00041FDF7.idx  PSDmuonTracker.h.E3315A2E38F232CF.idx  Progress.h.4B7791D43C682C4F.idx  like_ivashkin_wants_it.h.1B70FA6BEEA8A598.idx  muon_struct.h.D4E9EDE185396FA4.idx  time_left.h.CA87C1553388308A.idx
muon_calibration_binary/ChannelMap/ChannelMap/ui/: mainwindow_ui.py
muon_calibration_binary/include/: BinaryDataStructs.h  BinaryDataStructs.h.old  ChannelEntry.h  DECONVOLUTION.fh___  DataFileReader.h  DataFormat.h  DischargeFitter.h  FFTFilter.h  FHCalMapper.h  FourierFilter.h  Map.h  MatrixInversion.h  PolinomRoots.h  PolynomComplexRoots.h  PolynomRealRoots.h  Progress.h  PronyFitter.h  bindataformat.h  bindataformat.h_old  muon_struct.h
muon_calibration_binary/src/: BinaryDataStructs.cpp  BinaryDataStructs.cpp.old  ChannelEntry.cpp  DataFileReader.cpp  DataFormat.cpp  DischargeFitter.cpp  FFTFilter.cpp  FFTFilter.fcpp___  FourierFilter.cpp  MatrixInversion.cpp  PolinomRoots.cpp  PolynomComplexRoots.cpp  PolynomRealRoots.cpp  PronyFitter.cpp
